objects/Subjective_English_Survey__c.object
<CustomObject>
    <description>Created for Marketing Cloud Survey.</description>
    <fields>
        <fullName>Comfortable_reading_in_English__c</fullName>
        <description>How comfortable are you reading in English?</description>
        <inlineHelpText>How comfortable are you reading in English?</inlineHelpText>
        <label>SUBENG_v1.0.4</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comfortable_speaking_in_English__c</fullName>
        <description>How comfortable are you speaking in English?</description>
        <inlineHelpText>How comfortable are you speaking in English?</inlineHelpText>
        <label>SUBENG_v1.0.2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comfortable_writing_in_English__c</fullName>
        <description>How comfortable are you writing in English?</description>
        <inlineHelpText>How comfortable are you writing in English?</inlineHelpText>
        <label>SUBENG_v1.0.3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SUBENGs</relationshipLabel>
        <relationshipName>Subjective_English_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>created for marketing cloud survey.</description>
        <label>Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>created for Marketing cloud survey.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Is_English_your_native_language__c</fullName>
        <description>Is English your native language?</description>
        <inlineHelpText>Is English your native language?</inlineHelpText>
        <label>SUBENG_v1.0.1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>SUBENG</label>
    <nameField>
        <displayFormat>SUBENG-{0000000000}</displayFormat>
        <label>SUBENG Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUBENGs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>